 - Add plasticty module (experimental)
 - Fix configure test for Python dev (patch from Åsmund Ødegård)
 - Add mesh benchmark
 - Fix memory leak in mesh (data not deleted correctly in MeshTopology)
 - Fix detection of curses libraries
 - Remove Tecplot output format
0.6.3 [2006-10-27]
 - Move to new mesh library
 - Remove dolfin-config and move to pkg-config
 - Remove unused classes PArray, PList, Table, Tensor	
 - Visualization of 2D solutions in OpenDX is now supported (3D supported before)
 - Add support for evaluation of functionals
 - Fix bug in Vector::sum() for uBlas vectors
0.6.2-1 [2006-09-06]
 - Fix compilation error when using --enable-petsc (dolfin::uBlasVector::PETScVector undefined)
0.6.2 [2006-09-05]
 - Finish chapter in manual on linear algebra
 - Enable PyDOLFIN by default, use --disable-pydolfin to disable
 - Disable PETSc by default, use --enable-petsc to enable
 - Modify ODE solver interface for u0() and f()
 - Add class ConvectionMatrix
 - Readd classes LoadVector, MassMatrix, StiffnessMatrix
 - Add matrix factory for simple creation of standard finite element matrices
 - Collect static solvers in LU and GMRES
 - Bug fixes for Python interface PyDOLFIN
 - Enable use of direct solver for ODE solver (experimental)
 - Remove demo bistable
 - Restructure and cleanup linear algebra
 - Use UMFPACK for LU solver with uBlas matrix types
 - Add templated wrapper class for different uBlas matrix types
 - Add ILU preconditioning for uBlas matrices
 - Add Krylov solver for uBlas sparse matrices (GMRES and BICGSTAB)
 - Add first version of new mesh library (NewMesh, experimental)
 - Add Parametrized::readParameters() to trigger reading of values on set()
 - Remove output of zeros in Octave matrix file format
 - Use uBlas-based vector for Vector if PETSc disabled
 - Add wrappers for uBlas compressed_matrix class
 - Compute eigenvalues using SLEPc (an extension of PETSc)
 - Clean up assembly and linear algebra